Added controller Layer

--- a/ems-backend/src/main/resources/application.properties
+++ b/ems-backend/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=Manish@9507
 spring.jpa.properties.hibernate-dialect=prg.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.security.basic.enabled=false
+
 #yml -> writtingmethod
 # spring:
 #  datasource:
