--- a/ems-frontend/package.json
+++ b/ems-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "ems-frontend": "file:",
     "react": "^18.3.1",
